--- a/front/src/index.template.html
+++ b/front/src/index.template.html
@@ -3,17 +3,20 @@
   <head>
     <title><%= productName %></title>
 
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="<%= productDescription %>">
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="VTC Réunion, uber Réunion, taxi Réunion, chauffeur Réunion, transport Réunion, VTC la Réunion, uber la Réunion, taxi la Réunion, chauffeur la Réunion, transport la Réunion, VTC 974, uber 974, taxi 974, chauffeur 974, transport 974, VTC île de la Réunion, uber île de la Réunion, taxi île de la Réunion, chauffeur île de la Réunion, transport île de la Réunion, application de vtc à la reunion, application de transport de la reunion">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
+    <!--<link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="icon" type="image/ico" href="favicon.ico">-->
+    <link rel="icon" type="image/ico" href="favicon.jpg">
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
